# satisficing-institute

./: .env  .env.example  .env.tavily  .gitattributes  .gitignore  .notion_fast_sync_progress.json  .notion_sync_batch_1.txt  .notion_sync_batch_2.txt  .notion_sync_batch_3.txt  .notion_sync_batch_4.txt  .notion_sync_batch_5.txt  .notion_sync_batches.json  .notion_sync_progress.json  .notion_sync_result_batch_1.json  .notion_sync_v2_progress.json  .notion_sync_v4_progress.json  1  33角色能力补强工具方案.md  AGENTS.md  AGENT_STATE.md  CLAWHUB_SKILL_INSTALL_LIST.md  COMPRESSION_SUMMARY.md  DECISION_SAFETY_RED_LINES.md  DEPLOYMENT_STATUS.md  Egbertie个人命理完整档案.md  Egbertie个人品牌故事_星盘融合版.md  GAME里程碑调整-V1.1.md  HEARTBEAT.md  INTERNAL_MEETING_PROTOCOL_V1.md  Kimi_Allegretto使用规则.md  MEETING_PROTOCOL.md  MEMORY.md  NOTION_BG_SYNC_REPORT.json  NOTION_COMPLETE_SYNC_FINAL_REPORT.json  NOTION_COMPLETE_SYNC_FINAL_REPORT.md  NOTION_SYNC_STATUS_REPORT.md  ORGANIZATION.md  README-合伙人决策教练.md  README.md  README_AZURE_TEE.md  (+99 more)
.cache/: check_cache.json
.clawhub/: lock.json
.config/: claude.env  figjam-create.sh  figjam-setup.md  github.env  github_models.env  github_models.json  jina.env  kimi.env  外部工具配置信息.md  文档同步执行计划.md  文档同步执行计划_V1.1.md
.scripts/: classify_files.py  notion_sync_batch1.py  sync_all.py  sync_runner.py
.workspace_optimization/: empty_folders_list.txt  operation_log.md  phase1_before_report.md  phase4_after_report.md
A-manyige/: V1.5_蓝军审核报告.md  全案修改意见_V1.3.md  关键文件索引.md  合伙人踩雷检测_产品设计方案.md  (+5 more)
A-manyige_folder/99_📦完整下载包/V2.0_技术跃升成果集/代码模块/zero_pool_loader/: CMakeLists.txt
(+3449 files in other folders)
